# sdkwork-modelkit

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json
apis/app-api/modelkit/: modelkit-app-api.openapi.json
configs/: sdkwork-api-cloud-gateway.modelkit.development.toml  sdkwork-api-cloud-gateway.modelkit.production.toml
configs/topology/: cloud.development.env  cloud.production.env  standalone.development.env  standalone.production.env  standalone.unified-process.development.env
crates/sdkwork-api-modelkit-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-modelkit-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-modelkit-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-modelkit-standalone-gateway/: Cargo.toml
crates/sdkwork-api-modelkit-standalone-gateway/src/: bootstrap.rs  lib.rs  main.rs
crates/sdkwork-modelkit-catalog-repository-sqlx/: Cargo.toml
crates/sdkwork-modelkit-catalog-repository-sqlx/src/: lib.rs  schema.rs  seed.rs  store.rs
crates/sdkwork-modelkit-catalog-service/: Cargo.toml
crates/sdkwork-modelkit-catalog-service/src/: domain.rs  error.rs  lib.rs  ports.rs  service.rs
crates/sdkwork-modelkit-database-host/: Cargo.toml
crates/sdkwork-modelkit-database-host/specs/: component.spec.json
crates/sdkwork-modelkit-database-host/src/: lib.rs
crates/sdkwork-modelkit-drive/: Cargo.toml  README.md
crates/sdkwork-modelkit-drive/src/: lib.rs
crates/sdkwork-modelkit-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-modelkit-gateway-assembly/specs/: README.md  component.spec.json
crates/sdkwork-modelkit-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-modelkit-preferences-repository-sqlx/: Cargo.toml
crates/sdkwork-modelkit-preferences-repository-sqlx/src/: lib.rs  schema.rs  store.rs
crates/sdkwork-modelkit-preferences-service/: Cargo.toml
crates/sdkwork-modelkit-preferences-service/src/: domain.rs  error.rs  lib.rs  ports.rs  service.rs
crates/sdkwork-modelkit-standalone-gateway/: Cargo.toml
crates/sdkwork-modelkit-standalone-gateway/src/: bootstrap.rs  main.rs
crates/sdkwork-routes-modelkit-app-api/: Cargo.toml
crates/sdkwork-routes-modelkit-app-api/specs/: component.spec.json
crates/sdkwork-routes-modelkit-app-api/src/: dto.rs  envelope.rs  handlers.rs  lib.rs  paths.rs  routes.rs  state.rs  web_bootstrap.rs
crates/sdkwork-routes-modelkit-http-auth/: Cargo.toml
crates/sdkwork-routes-modelkit-http-auth/src/: actor_context.rs  auth.rs  lib.rs  permissions.rs  response.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/ddl/baseline/postgres/: 0001_modelkit_baseline.sql
database/ddl/baseline/sqlite/: 0001_modelkit_baseline.sql
database/fixtures/: README.md
database/migrations/postgres/: README.md
database/migrations/sqlite/: README.md
database/seeds/: seed.manifest.json
database/seeds/common/: README.md
database/seeds/locales/de-DE/: README.md
database/seeds/locales/en-US/: README.md
database/seeds/locales/fr-FR/: README.md
database/seeds/locales/ja-JP/: README.md
database/seeds/locales/ko-KR/: README.md
database/seeds/locales/ru-RU/: README.md
database/seeds/locales/zh-CN/: README.md
deployments/: deploy.yaml
etc/: sdkwork-api-cloud-gateway.modelkit.development.toml
scripts/: generate-modelkit-app-sdk.mjs  modelkit-dev.mjs  run-modelkit-standalone-gateway.mjs  verify-modelkit-contract-foundation.test.mjs  verify-modelkit-standard-architecture.test.mjs
sdks/sdkwork-modelkit-app-sdk/: sdk-manifest.json
sdkwork-modelkit-pc-react/: README.md  auto_heal.cjs  check_final.txt  check_zh_in_en.cjs  clean_unused_keys.cjs  extract_jsx_text.cjs  fix450.cjs  fixBorders.js  fixDarks.js  fixGrays.js  fixJSON.cjs  fixRemainingStyles.js  fixThemeAll.cjs  fixThemes2.js  fixThemes3.js  fixThemes4.js  fixThemes5.js  fixThemesFinal.js  fixThemesHex.js  fixWhiteText.js  fixWhiteTextFinal.js  fixWhiteTextHover.js  fix_others_en.cjs  fix_shop_en.cjs  heal_comments.cjs  heal_expressions.cjs  i18n_migrate.cjs  inject.cjs  inject_i18n.cjs  metadata.json  package.json  replaceColors.cjs  replaceMore.cjs  replace_mock.cjs  reverse_heal.cjs  sdkwork.app.config.json  tmp.js  tmp.txt  tmp2.js  translate_auto.cjs  (+7 more)
sdkwork-modelkit-pc-react/app/applet/: find_text.cjs  fixThemes.js
sdkwork-modelkit-pc-react/config/browser/: runtime-env.development.example.json
sdkwork-modelkit-pc-react/docs/: INDEX.yaml  README.md
sdkwork-modelkit-pc-react/docs/architecture/tech/: TECH_ARCHITECTURE.md
sdkwork-modelkit-pc-react/docs/product/prd/: PRD.md
sdkwork-modelkit-pc-react/etc/: sdkwork.deployment.config.json
sdkwork-modelkit-pc-react/mocks/node-domexception/: README.md  package.json
sdkwork-modelkit-pc-react/mocks/node-domexception/specs/: README.md  component.spec.json
sdkwork-modelkit-pc-react/sdks/sdkwork-modelkit-sdk-typescript/: README.md  package.json
sdkwork-modelkit-pc-react/sdks/sdkwork-modelkit-sdk-typescript/specs/: README.md  component.spec.json
sdkwork-modelkit-pc-react/sdks/sdkwork-modelkit-sdk-typescript/src/: index.ts  types.ts
sdkwork-modelkit-pc-react/specs/: README.md  component.spec.json
sdkwork-modelkit-pc-react/src/: App.tsx  AuthGate.tsx  globals.d.ts  i18n.ts  index.css  main.tsx
sdkwork-modelkit-pc-react/src/bootstrap/: environment.ts  iamRuntime.ts  index.ts  runtime.ts
sdkwork-modelkit-pc-react/src/layouts/: MainLayout.tsx
sdkwork-modelkit-pc-react/src/locales/en/: common.json  news.json  plugins.json  prompts.json  relay.json  repos.json  shop.json  skillhub.json  software.json  workspace.json
sdkwork-modelkit-pc-react/src/locales/zh/: common.json  news.json  plugins.json  prompts.json  relay.json  repos.json  shop.json  skillhub.json  software.json  workspace.json
sdkwork-modelkit-pc-react/workspace/: find_text.cjs
specs/: iam.module.manifest.json  topology.spec.json
tools/: modelkit_sdk_generate.mjs
(+3 files in other folders)
