[workspace]
members = [
    "crates/sdkwork-api-modelkit-assembly",
    "crates/sdkwork-modelkit-database-host",
    "crates/sdkwork-modelkit-preferences-service",
    "crates/sdkwork-modelkit-preferences-repository-sqlx",
    "crates/sdkwork-modelkit-catalog-service",
    "crates/sdkwork-modelkit-catalog-repository-sqlx",
    "crates/sdkwork-modelkit-drive",
    "crates/sdkwork-routes-modelkit-http-auth",
    "crates/sdkwork-routes-modelkit-app-api",
    "crates/sdkwork-api-modelkit-assembly",
    "crates/sdkwork-api-modelkit-standalone-gateway",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
http = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "any", "sqlite", "postgres", "derive", "macros", "json"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-repository = { path = "../sdkwork-database/crates/sdkwork-database-repository" }

sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork_iam_web_adapter = { package = "sdkwork-iam-web-adapter", path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork_iam_database_host = { package = "sdkwork-iam-database-host", path = "../sdkwork-iam/crates/sdkwork-iam-database-host" }
sdkwork_iam_embedded_application_bootstrap = { package = "sdkwork-iam-embedded-application-bootstrap", path = "../sdkwork-iam/crates/sdkwork-iam-embedded-application-bootstrap" }
sdkwork_routes_iam_app_api = { package = "sdkwork-routes-iam-app-api", path = "../sdkwork-iam/crates/sdkwork-routes-iam-app-api" }

sdkwork-drive-storage-contract = { path = "../sdkwork-drive/crates/sdkwork-drive-storage-contract" }
sdkwork-drive-workspace-service = { path = "../sdkwork-drive/crates/sdkwork-drive-workspace-service" }

sdkwork-modelkit-database-host = { path = "crates/sdkwork-modelkit-database-host" }
sdkwork-modelkit-preferences-service = { path = "crates/sdkwork-modelkit-preferences-service" }
sdkwork-modelkit-preferences-repository-sqlx = { path = "crates/sdkwork-modelkit-preferences-repository-sqlx" }
sdkwork-modelkit-catalog-service = { path = "crates/sdkwork-modelkit-catalog-service" }
sdkwork-modelkit-catalog-repository-sqlx = { path = "crates/sdkwork-modelkit-catalog-repository-sqlx" }
sdkwork-modelkit-drive = { path = "crates/sdkwork-modelkit-drive" }
sdkwork-routes-modelkit-http-auth = { path = "crates/sdkwork-routes-modelkit-http-auth" }
sdkwork-routes-modelkit-app-api = { path = "crates/sdkwork-routes-modelkit-app-api" }
sdkwork-api-modelkit-assembly = { path = "crates/sdkwork-api-modelkit-assembly" }
