[package]
name = "sdkwork-api-modelkit-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-modelkit application HTTP plane."

[lib]
name = "sdkwork_api_modelkit_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-modelkit-database-host.workspace = true
sdkwork-routes-modelkit-http-auth.workspace = true
sdkwork-routes-modelkit-app-api.workspace = true
