[package]
name = "sdkwork-modelkit-catalog-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid = { version = "1.18", features = ["v4"] }
sdkwork-modelkit-catalog-service = { workspace = true }
