[package]
name = "sdkwork-modelkit-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-modelkit application HTTP plane."

[lib]
name = "sdkwork_modelkit_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork-modelkit-database-host.workspace = true
sdkwork-routes-modelkit-app-api.workspace = true
sdkwork-routes-modelkit-http-auth.workspace = true
