[package]
name = "sdkwork-modelkit-standalone-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sdkwork-modelkit-standalone-gateway"
path = "src/main.rs"

[dependencies]
axum.workspace = true
sdkwork-modelkit-database-host.workspace = true
sdkwork-modelkit-gateway-assembly.workspace = true
sdkwork-routes-modelkit-app-api.workspace = true
sdkwork-web-bootstrap.workspace = true
sdkwork_iam_database_host.workspace = true
sdkwork_routes_iam_app_api.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
