[package]
name = "sdkwork-routes-modelkit-app-api"
version.workspace = true
edition.workspace = true

[lib]
name = "sdkwork_routes_modelkit_app_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-modelkit-preferences-service.workspace = true
sdkwork-modelkit-catalog-service.workspace = true
sdkwork-routes-modelkit-http-auth.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-web-core.workspace = true
sdkwork-web-axum.workspace = true
sdkwork_iam_web_adapter.workspace = true
