[package]
name = "sdkwork-routes-modelkit-http-auth"
version.workspace = true
edition.workspace = true

[lib]
name = "sdkwork_routes_modelkit_http_auth"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
http.workspace = true
sdkwork-modelkit-preferences-service.workspace = true
sdkwork-modelkit-catalog-service.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-web-core.workspace = true
serde.workspace = true
